<resources>
    <string name="app_name">"كرة القدم السعودية"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--<string name="admob_bunner_buttom">ca-app-pub-8681736614662277/9013516143</string>-->
    <!--<string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="admob_bunner_buttom">ca-app-pub-3112771865384930/1696568602</string>
    <string name="admob_interstitial">ca-app-pub-3112771865384930/4650035003</string>


    <string name="news_menu_item">الرئيسية</string>
    <string name="dawriat_news_menu_item">أخبار الدوريات</string>
    <string name="abd_allatif_menu_item">دوري عبداللطيف جميل</string>
    <string name="kadem_alharamin_menu_item">كأس خادم الحرمين الشريفين</string>
    <string name="wali_alahd_menu_item">كأس ولي العهد</string>
    <string name="first_class_dawri_menu_item">دوري الدرجة الأولى السعودي</string>
    <string name="title_activity_news_details">sdf</string>


    <string name="selected_leagues_pref_key">NOTIFICATION_PREF</string>
    <string name="abd_alatif_notificatin_pref_key">ABD_ALATIF_NOTIFICATION_KEY</string>
    <string name="khadim_notification_pref_key">KHADIM_NOTIFICATIN_KEY</string>
    <string name="wali_notification_pref_key">WALI_NOTIFICATION_KEY</string>
    <string name="first_notification_pref_key">FIRST_NOTIFICAITON_KEY</string>
    <string name="toast_featch_data_error">نأسف .. حدث خطأ في جلب بعض البيانات!</string>
    <string name="live_sport_item_menu">البث المباشر للمباريات</string>

    <string name="title_activity_splash1">Splash1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
